@@ -2,4 +2,4 @@ usr/bin
 usr/lib/post-base-installer.d
 usr/lib/finish-install.d
 usr/share/localechooser
-
+var/lib/localechooser
