@@ -26,47 +26,11 @@ Description: Language selection no longer possible
  To select a different language you will need to abort this installation
  and reboot the installer.
 
-Template: languagechooser/languagelist-ascii
-Type: select
-Choices-C: @languagecodes_ascii@
-Choices: @languagenames_ascii@
-Choices-en.UTF-8: @nativemessages_ascii@
-Default: en
-Description: Choose a language:
- Please choose the language used for the installation process. This
- language will be the default language for the final system.
- .
- This list is restricted to languages that can currently be displayed.
-
-Template: languagechooser/languagelist-latin
-Type: select
-Choices-C: @languagecodes_latin@
-Choices: @languagenames_latin@
-Choices-en.UTF-8: @nativemessages_latin@
-Default: en
-Description: Choose a language:
- Please choose the language used for the installation process. This
- language will be the default language for the final system.
- .
- This list is restricted to languages that can currently be displayed.
-
-Template: languagechooser/languagelist-fb
-Type: select
-Choices-C: @languagecodes_fb@
-Choices: @languagenames_fb@
-Choices-en.UTF-8: @nativemessages_fb@
-Default: en
-Description: Choose a language:
- Please choose the language used for the installation process. This
- language will be the default language for the final system.
- .
- This list is restricted to languages that can currently be displayed.
-
 Template: languagechooser/languagelist
 Type: select
-Choices-C: @languagecodes_all@
-Choices: @languagenames_all@
-Choices-en.UTF-8: @nativemessages_all@
+Choices-C: ${CODES}
+Choices: ${NAMES_EN}
+Choices-en.UTF-8: ${NAMES_BOTH}
 Default: en
 Description: Choose a language:
  Please choose the language used for the installation process. This
@@ -160,10 +124,6 @@ Template: debian-installer/charmap
 Type: string
 Description: for internal use; cannot be preseeded
  This variable is meant for console-setup use.
-
-Template: localechooser/alreadyrun
-Type: boolean
-Description: for internal use only
 
 Template: localechooser/supported-locales
 Type: multiselect
