@@ -14,6 +14,9 @@ localechooser (1.47) UNRELEASED; urgency=low
     improves support for languages with variants in different countries.
   * Remove redundant check for serial console: variables have already been set
     when the installer was initialized.
+  * Build the list of languages for the current display level at runtime
+    instead of having separate templates for them. This does make starting
+    localechooser slightly slower, but saves memory. Closes: #365307.
   * Various code cleanups.
 
  -- Frans Pop <fjp@debian.org>  Mon, 10 Mar 2008 14:54:30 +0100
